[package]
name = "rust_tic_tac_toe_game_server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
rust_udp_multicast_test = { git = "https://github.com/htoopyaelinn56/rust_udp_multicast_test" }
godot = { version = "0.4.2", features = ["experimental-wasm"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tracing = "0.1.41"
